h1 in tabcontent + section + nav in tab3

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="berichte">
 
           <div id="Tab1" class="tabcontent">
-
+            <h1>Woche 1</h1>
             <article class="postBox">
               <div class="postImageWindow"></div>
               <div class="postText">
@@ -100,6 +100,8 @@
 
 
           <div id="Tab2" class="tabcontent">
+            <h1>Woche 2</h1>
+
             <article class="postBox">
               <div class="postImageWindow"></div>
               <div class="postText">
@@ -141,70 +143,82 @@
                   Um dies besser beherrschen zu können, gibt es ein perfektes Lernspiel: „flexboxfroggy“, in welchem man
                   Frösche an den angegebenen Platz verschieben soll, indem man Flexbox einsetzt</p>
               </div>
+            </article>
+
           </div> <!-- END TAB 2 -->
 
 
           <div id="Tab3" class="tabcontent">
-            <article class="postBox">
-              <div class="postImageWindow" style="background-image: url(/assets/img/bugs.jpg"></div>
-              <div class="postText">
-                <small><i class="fa-solid fa-calendar-days"></i> 28.02.2022 </small>
-                <h3>Bugs Besprechung</h3>
-                <p>
-                  Heute haben wir uns gemeinsam um meine Fragen gekümmert, um im Verlauf eine Lösung zu finden.
-                  Unter anderem hatte ich Fragen bezüglich der Hintergrundfarbe meiner Webseite, denn ich habe mich mit
-                  der Frage auseinandergesetzt, ob man meine Seite in verschiedenen Hintergrundfarben aufteilen kann.
-                  Tatsächlich ist das möglich, indem man die Webseite in verschiedene Section aufteilt und ihnen
-                  daraufhin verschiedenen Farben zuzuteilen.
-                  Eine Section ist ein HTML Element, welches verwendet wird, um zusammengehörige Elemente zu gruppieren.
-                  Außerdem konnte ich mir auf einer Seite verschiedene Webseiten anschauen und im Folgenden versuchen
-                  einige Ideen zu sammeln, die mir für mein Design nützlich sein könnten.
-                  Ähnlich zu dem Hilfsmittel: „Scrimba“ , welches ich bereits erwähnt habe, wurden mir heute neue
-                  Workshops zugeteilt, die mir weiterhelfen sollen. Einer dieser Workshops soll mein Wissen zu „Flexbox“
-                  erweitern, um es gleichzeitig auch zu üben.</p>
-              </div>
-            </article>
+            <h1>Woche 3</h1>
+
+            <section>
+              <article class="postBox">
+                <div class="postImageWindow" style="background-image: url(/assets/img/bugs.jpg"></div>
+                <div class="postText">
+                  <small><i class="fa-solid fa-calendar-days"></i> 28.02.2022 </small>
+                  <h3>Bugs Besprechung</h3>
+                  <p>
+                    Heute haben wir uns gemeinsam um meine Fragen gekümmert, um im Verlauf eine Lösung zu finden.
+                    Unter anderem hatte ich Fragen bezüglich der Hintergrundfarbe meiner Webseite, denn ich habe mich
+                    mit
+                    der Frage auseinandergesetzt, ob man meine Seite in verschiedenen Hintergrundfarben aufteilen kann.
+                    Tatsächlich ist das möglich, indem man die Webseite in verschiedene Section aufteilt und ihnen
+                    daraufhin verschiedenen Farben zuzuteilen.
+                    Eine Section ist ein HTML Element, welches verwendet wird, um zusammengehörige Elemente zu
+                    gruppieren.
+                    Außerdem konnte ich mir auf einer Seite verschiedene Webseiten anschauen und im Folgenden versuchen
+                    einige Ideen zu sammeln, die mir für mein Design nützlich sein könnten.
+                    Ähnlich zu dem Hilfsmittel: „Scrimba“ , welches ich bereits erwähnt habe, wurden mir heute neue
+                    Workshops zugeteilt, die mir weiterhelfen sollen. Einer dieser Workshops soll mein Wissen zu
+                    „Flexbox“
+                    erweitern, um es gleichzeitig auch zu üben.</p>
+                </div>
+              </article>
 
 
-            <article class="postBox">
-              <div class="postImageWindow" style="background-image: url(/assets/img/codingbild.jpg"></div>
-              <div class="postText">
-                <small><i class="fa-solid fa-calendar-days"></i> 03.03.2022</small>
-                <h3>Überschrift</h3>
-                <p>Heute haben wir uns rund um mein Layout beschäftigt. Und zwar wurde das Aussehen meiner Webseite
-                  genau verändert. Wir haben
-                  uns gemeinsam eine andere Hintergrundfarbe ausgesucht, welche den Leser ansprechen soll und soll
-                  einladend auf meine Webseite erscheinen.
-                  Wir haben uns auch mit den Schriftarten im Allgemeinen beschäftigt und diese durch kostenlose
-                  Schriften aus dem Internet verändert. Ich habe hier die Seite <a
-                    href="https://fonts.google.com">Google Fonts</a> verwendet
-                  Ich habe gelern, wie man Links auf meiner Webseite einbauen kann, zum Beispiel, wie ich von meiner
-                  Hauptseite auf meine Visitenkarte gelangen kann.
-                  Im Vergleich zum Anfang fühle ich mich jetzt schon viel sicherer bezüglich des Programmierens.
-                  Außerdem bin ich nun in der Lage vieles schon selbständig zu machen
-                </p>
-              </div>
-            </article>
+              <article class="postBox">
+                <div class="postImageWindow" style="background-image: url(/assets/img/codingbild.jpg"></div>
+                <div class="postText">
+                  <small><i class="fa-solid fa-calendar-days"></i> 03.03.2022</small>
+                  <h3>Überschrift</h3>
+                  <p>Heute haben wir uns rund um mein Layout beschäftigt. Und zwar wurde das Aussehen meiner Webseite
+                    genau verändert. Wir haben
+                    uns gemeinsam eine andere Hintergrundfarbe ausgesucht, welche den Leser ansprechen soll und soll
+                    einladend auf meine Webseite erscheinen.
+                    Wir haben uns auch mit den Schriftarten im Allgemeinen beschäftigt und diese durch kostenlose
+                    Schriften aus dem Internet verändert. Ich habe hier die Seite <a
+                      href="https://fonts.google.com">Google Fonts</a> verwendet
+                    Ich habe gelern, wie man Links auf meiner Webseite einbauen kann, zum Beispiel, wie ich von meiner
+                    Hauptseite auf meine Visitenkarte gelangen kann.
+                    Im Vergleich zum Anfang fühle ich mich jetzt schon viel sicherer bezüglich des Programmierens.
+                    Außerdem bin ich nun in der Lage vieles schon selbständig zu machen
+                  </p>
+                </div>
+              </article>
 
-            <article class="postBox">
-              <div class="postImageWindow" style="background-image: url(/assets/img/codingbild.jpg"></div>
-              <div class="postText">
-                <small><i class="fa-solid fa-calendar-days"></i> 03.03.2022</small>
-                <h3>Überschrift</h3>
-                <p>Heute haben wir uns rund um mein Layout beschäftigt. Und zwar wurde das Aussehen meiner Webseite
-                  genau verändert. Wir haben
-                  uns gemeinsam eine andere Hintergrundfarbe ausgesucht, welche den Leser ansprechen soll und soll
-                  einladend auf meine Webseite erscheinen.
-                  Wir haben uns auch mit den Schriftarten im Allgemeinen beschäftigt und diese durch kostenlose
-                  Schriften aus dem Internet verändert. Ich habe hier die Seite <a
-                    href="https://fonts.google.com">Google Fonts</a> verwendet
-                  Ich habe gelern, wie man Links auf meiner Webseite einbauen kann, zum Beispiel, wie ich von meiner
-                  Hauptseite auf meine Visitenkarte gelangen kann.
-                  Im Vergleich zum Anfang fühle ich mich jetzt schon viel sicherer bezüglich des Programmierens.
-                  Außerdem bin ich nun in der Lage vieles schon selbständig zu machen
-                </p>
-              </div>
-            </article>
+              <article class="postBox">
+                <div class="postImageWindow" style="background-image: url(/assets/img/codingbild.jpg"></div>
+                <div class="postText">
+                  <small><i class="fa-solid fa-calendar-days"></i> 03.03.2022</small>
+                  <h3>Überschrift</h3>
+                  <p>Heute haben wir uns rund um mein Layout beschäftigt. Und zwar wurde das Aussehen meiner Webseite
+                    genau verändert. Wir haben
+                    uns gemeinsam eine andere Hintergrundfarbe ausgesucht, welche den Leser ansprechen soll und soll
+                    einladend auf meine Webseite erscheinen.
+                    Wir haben uns auch mit den Schriftarten im Allgemeinen beschäftigt und diese durch kostenlose
+                    Schriften aus dem Internet verändert. Ich habe hier die Seite <a
+                      href="https://fonts.google.com">Google Fonts</a> verwendet
+                    Ich habe gelern, wie man Links auf meiner Webseite einbauen kann, zum Beispiel, wie ich von meiner
+                    Hauptseite auf meine Visitenkarte gelangen kann.
+                    Im Vergleich zum Anfang fühle ich mich jetzt schon viel sicherer bezüglich des Programmierens.
+                    Außerdem bin ich nun in der Lage vieles schon selbständig zu machen
+                  </p>
+                </div>
+              </article>
+            </section>
+
+            <nav></nav>
+
           </div> <!-- END TAB 3 -->
 
 
