--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
           <div id="Tab1" class="tabcontent">
             <h1>Woche 1</h1>
+          <section>
             <article class="postBox">
               <div class="postImageWindow"></div>
               <div class="postText">
@@ -96,12 +97,15 @@
                   noch zu erledigenden Aufgaben zu verschaffen.</p>
               </div>
             </article>
+          </section>
+
           </div> <!-- END TAB 1 -->
 
 
-          <div id="Tab2" class="tabcontent">
-            <h1>Woche 2</h1>
+        <div id="Tab2" class="tabcontent">
+          <h1>Woche 2</h1>
 
+          <section>
             <article class="postBox">
               <div class="postImageWindow"></div>
               <div class="postText">
@@ -126,7 +130,7 @@
 
 
             <article class="postBox">
-              <div class="postImageWindow" style="background-image: url(/assets/img/codingbild.jpg"></div>
+              <div class="postImageWindow"></div>
               <div class="postText">
                 <small><i class="fa-solid fa-calendar-days"></i> 25.02.2022</small>
                 <h3>Layout Design </h3>
@@ -144,8 +148,9 @@
                   Frösche an den angegebenen Platz verschieben soll, indem man Flexbox einsetzt</p>
               </div>
             </article>
+          </section>
 
-          </div> <!-- END TAB 2 -->
+        </div> <!-- END TAB 2 -->
 
 
           <div id="Tab3" class="tabcontent">
