berichte gefixt + responsive + table anfang

--- a/index.html
+++ b/index.html
@@ -25,11 +25,30 @@
 
     <section id="niicee" class="contentBox">
       <h2>Das Betrieb <i class="fa-regular fa-building"></i></h2>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum sed atque quis doloribus sequi vel
-        necessitatibus ipsa obcaecati perferendis cum! Numquam tempore sed, omnis, exercitationem laboriosam nulla quae
-        laborum eos officiis asperiores porro? Libero cupiditate incidunt dolores repudiandae cumque excepturi,
-        aspernatur repellendus sunt esse eveniet impedit molestias earum a ab quaerat, voluptas dignissimos odio ducimus
-        commodi pariatur! Recusandae, expedita eaque?</p>
+      
+      <section class="table">
+        <div class="table-row">
+          <div class="table-cell">Hello</div>
+          <div class="table-cell">hello</div>
+        </div>
+  
+        <div class="table-row">
+          <div class="table-cell">Hello</div>
+          <div class="table-cell">hello</div>
+        </div>
+  
+        <div class="table-row">
+          <div class="table-cell">Hello</div>
+          <div class="table-cell">hello</div>
+        </div>
+  
+        <div class="table-row">
+          <div class="table-cell">Hello</div>
+          <div class="table-cell">hello</div>
+        </div>
+      </section>
+      
+
     </section>
 
     <section id="posts">
@@ -45,59 +64,60 @@
           <button class="tablinks" onclick="tabOpener(event, 'Tab7')">Woche 7</button>
           <button class="tablinks" onclick="tabOpener(event, 'Tab8')">Woche 8</button>
         </nav>
+
         <h2>Meine Berichte</h2>
 
         <div id="berichte">
 
           <div id="Tab1" class="tabcontent">
             <h1>Woche 1</h1>
-          <section>
-            <article class="postBox">
-              <div class="postImageWindow"></div>
-              <div class="postText">
-                <small><i class="fa-solid fa-calendar-days"></i> 15.02.2022 </small>
-                <h3>Praktikumsstart</h3>
-                <p>
-                  Zu Beginn meines Praktikums habe ich via FaceTime meinen Chef Herrn Jayhooni kennengelernt, welcher
-                  mich über das Unternehmen „Niicee Solution“ im Weiteren aufgeklärt hat. Er ist ein zertifizierter und
-                  anerkannter Bildungsträger im Bereich IT und ist Mitgründer des Super Code Unternehmens.
-                  Das Hauptziel meines Praktikums beschäftigt sich mit dem Programmieren über HTML & CSS, dessen
-                  Funktionen und Möglichkeiten ich anhand von eigenen Projekten näher kennenlernen kann. Außerdem soll
-                  im Verlauf auch die Programmiersprache Java Skript erlernt werden.
-                  Die Bereiche meines Praktikums decken meine Interessen ab und das Programmieren macht mir sehr viel
-                  Spaß. Deshalb habe ich mich bereits im Voraus auf dieses Praktikum gefreut, um hier neue Dinge zu
-                  lernen, die ich in meinem weiteren Berufsleben gut anwenden kann.
-                  Im Bezug auf die Schule und meinen Kenntnissen, die ich bereits habe, ist mir aufgefallen, dass ich
-                  viele Informationen bereits kenne und damit eine Basis für das Programmieren beherrsche. Die
-                  Vertiefung in diesen bestimmten Bereichen, wird mir sowohl in meinem späteren Beruf, als auch in
-                  meiner Schullaufbahn in Fächern wie z.B WINF behilflich sein.</p>
-              </div>
-            </article>
+            <section>
+              <article class="postBox">
+                <div class="postImageWindow"></div>
+                <div class="postText">
+                  <small><i class="fa-solid fa-calendar-days"></i> 15.02.2022 </small>
+                  <h3>Praktikumsstart</h3>
+                  <p>
+                    Zu Beginn meines Praktikums habe ich via FaceTime meinen Chef Herrn Jayhooni kennengelernt, welcher
+                    mich über das Unternehmen „Niicee Solution“ im Weiteren aufgeklärt hat. Er ist ein zertifizierter und
+                    anerkannter Bildungsträger im Bereich IT und ist Mitgründer des Super Code Unternehmens.
+                    Das Hauptziel meines Praktikums beschäftigt sich mit dem Programmieren über HTML & CSS, dessen
+                    Funktionen und Möglichkeiten ich anhand von eigenen Projekten näher kennenlernen kann. Außerdem soll
+                    im Verlauf auch die Programmiersprache Java Skript erlernt werden.
+                    Die Bereiche meines Praktikums decken meine Interessen ab und das Programmieren macht mir sehr viel
+                    Spaß. Deshalb habe ich mich bereits im Voraus auf dieses Praktikum gefreut, um hier neue Dinge zu
+                    lernen, die ich in meinem weiteren Berufsleben gut anwenden kann.
+                    Im Bezug auf die Schule und meinen Kenntnissen, die ich bereits habe, ist mir aufgefallen, dass ich
+                    viele Informationen bereits kenne und damit eine Basis für das Programmieren beherrsche. Die
+                    Vertiefung in diesen bestimmten Bereichen, wird mir sowohl in meinem späteren Beruf, als auch in
+                    meiner Schullaufbahn in Fächern wie z.B WINF behilflich sein.</p>
+                </div>
+              </article>
 
-            <article class="postBox">
-              <div class="postImageWindow"></div>
-              <div class="postText">
-                <small><i class="fa-solid fa-calendar-days"></i> 17.02.2022</small>
-                <h3>Hilfsmittel beim Programmieren</h3>
-                <p>
-                  Heute haben wir uns ausschließlich mit Hilfsmitteln beschäftigt, die mich auf meinem gesamten
-                  Praktikum begleiten sollen. Einige davon werde ich im Folgenden kurz erklären:
-                  Github: Dadurch bin ich in der Lage meine Fortschritte zu dokumentieren und sie mit meinem Chef zu
-                  teilen und auszubessern. Darüber hinaus habe ich Zugang zu bereits veröffentlichten Produkten von
-                  anderen Programmierern, an denen ich mich orientieren oder inspirieren kann. Ich selber bin auch in
-                  der Lage meine Produkte fr andere hochzuladen. Bei Fehlern oder ähnlichem, werden diese von anderen
-                  dann behoben und ausgebessert, sodass man auf seine Fehler aufmerksam gemacht wird.
-                  Scrimba: Hierüber bekomme ich Zugang auf eine Reihe von verschiedenen Online Workshops, die sich mit
-                  diversen Themen rund um das Thema Programmieren handeln. Die Workshops sind leicht veranschaulicht in
-                  Videos dargestellt und können somit bei aufkommenden Problemen Lösungen bieten.
-                  w3school: Dient als Wörterbuch für Fachbegriffe aus der Programmiersprache und zeigt darüber hinaus
-                  auch genauere Anleitungen zu verschiedenen Funktionen.
-                  Teams: Über Teams findet hauptsächlich die Kommunikation zu meinem Chef statt und auch die weiteren
-                  Konferenzen. Hier haben wir außerdem ein Kanbanboard angelegt, um einen Überblick über erledigten und
-                  noch zu erledigenden Aufgaben zu verschaffen.</p>
-              </div>
-            </article>
-          </section>
+              <article class="postBox">
+                <div class="postImageWindow"></div>
+                <div class="postText">
+                  <small><i class="fa-solid fa-calendar-days"></i> 17.02.2022</small>
+                  <h3>Hilfsmittel beim Programmieren</h3>
+                  <p>
+                    Heute haben wir uns ausschließlich mit Hilfsmitteln beschäftigt, die mich auf meinem gesamten
+                    Praktikum begleiten sollen. Einige davon werde ich im Folgenden kurz erklären:
+                    Github: Dadurch bin ich in der Lage meine Fortschritte zu dokumentieren und sie mit meinem Chef zu
+                    teilen und auszubessern. Darüber hinaus habe ich Zugang zu bereits veröffentlichten Produkten von
+                    anderen Programmierern, an denen ich mich orientieren oder inspirieren kann. Ich selber bin auch in
+                    der Lage meine Produkte fr andere hochzuladen. Bei Fehlern oder ähnlichem, werden diese von anderen
+                    dann behoben und ausgebessert, sodass man auf seine Fehler aufmerksam gemacht wird.
+                    Scrimba: Hierüber bekomme ich Zugang auf eine Reihe von verschiedenen Online Workshops, die sich mit
+                    diversen Themen rund um das Thema Programmieren handeln. Die Workshops sind leicht veranschaulicht in
+                    Videos dargestellt und können somit bei aufkommenden Problemen Lösungen bieten.
+                    w3school: Dient als Wörterbuch für Fachbegriffe aus der Programmiersprache und zeigt darüber hinaus
+                    auch genauere Anleitungen zu verschiedenen Funktionen.
+                    Teams: Über Teams findet hauptsächlich die Kommunikation zu meinem Chef statt und auch die weiteren
+                    Konferenzen. Hier haben wir außerdem ein Kanbanboard angelegt, um einen Überblick über erledigten und
+                    noch zu erledigenden Aufgaben zu verschaffen.</p>
+                </div>
+              </article>
+            </section>
 
           </div> <!-- END TAB 1 -->
 
