niicee table + responsive

--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
       
       <section class="table">
         <div class="table-row">
-          <div class="table-cell">Hello</div>
+          <div class="table-cell">Vorstellung des Praktikumsbetriebs</div>
+          <div class="table-cell">Antwort</div>
+        </div>
+  
+        <div class="table-row">
+          <div class="table-cell">Name und Anschrift des Unternehmens</div>
           <div class="table-cell">hello</div>
         </div>
   
         <div class="table-row">
-          <div class="table-cell">Hello</div>
+          <div class="table-cell">Produkte und/ oder Dienstleistungen, die das Unternehmen anbietet</div>
           <div class="table-cell">hello</div>
         </div>
   
         <div class="table-row">
-          <div class="table-cell">Hello</div>
-          <div class="table-cell">hello</div>
-        </div>
-  
-        <div class="table-row">
-          <div class="table-cell">Hello</div>
+          <div class="table-cell">Größe des Unternehmens (Anzahl der Mitarbeitet, Standorte) </div>
           <div class="table-cell">hello</div>
         </div>
       </section>
