das betrieb volltändig

--- a/index.html
+++ b/index.html
@@ -29,22 +29,22 @@
       <section class="table">
         <div class="table-row">
           <div class="table-cell">Vorstellung des Praktikumsbetriebs</div>
-          <div class="table-cell">Antwort</div>
+          <div class="table-cell"> niicee solutions ist eine IT-Firma mit Sitz in Bonn. Sie wurde 2006 von Sam Jayhooni (M.Sc.), Wirtschaftsinformatiker, Mediengestalter für audiovisuelle Medien und zertifizierter Apple Trainer, gegründet.<br> Zu den Kunden von niicee solutions gehören unter anderem Apple, SAP, Deutsche Bank, Deutsche Telekom, Mars Wrigley, Bechtle, McDonald’s oder Boehringer Ingelheim.</div>
         </div>
   
         <div class="table-row">
           <div class="table-cell">Name und Anschrift des Unternehmens</div>
-          <div class="table-cell">hello</div>
+          <div class="table-cell">niicee solutions Aennchenstr. 19, 53177 Bonn.</div>
         </div>
   
         <div class="table-row">
           <div class="table-cell">Produkte und/ oder Dienstleistungen, die das Unternehmen anbietet</div>
-          <div class="table-cell">hello</div>
+          <div class="table-cell">Die Kerntätigkeitsfelder sind Software Entwicklung, IT-Management, IT-Trainings und Audio/Video Produktionen im Rahmen von Implementierung von IT-Lösungen in großen und mittelständigen Unternehmen. </div>
         </div>
   
         <div class="table-row">
           <div class="table-cell">Größe des Unternehmens (Anzahl der Mitarbeitet, Standorte) </div>
-          <div class="table-cell">hello</div>
+          <div class="table-cell">niicee solutions ist ein Einzelunternehmen. Je nach Projektgröße und -komplexität werden jedoch individuelle Projektteams aus selektierten Experten zielgerichtet zusammengestellt.</div>
         </div>
       </section>
       
