--- a/index.html
+++ b/index.html
@@ -327,10 +327,22 @@
           <div id="Tab6" class="tabcontent">
             <article class="postBox">
               <div class="Woche2"></div>
+              <div class="postImageWindow" style="background-image: url(/assets/img/codingbild.jpg"></div>
               <div class="postText">
                 <small><i class="fa-solid fa-calendar-days"></i> 21.03.2022 </small>
                 <h3>Praktikumsstart</h3>
-                <p></p>
+                <p>Heute habe ich die ersten JavaSkript Fortschritte gemacht und wie bereits in den letzten
+                  Stunden besprochen, konnte ich bis zu der heutigen Stunde den Tabopener üben und gegeben
+                  falls einsetzten.
+                  Ein Tabopener ist dafür da um nicht zu viel Text auf einmal stehen zu haben. Da ich Wochen
+                  Buttons erstellt habe möchte ich, dass für die ausgewählte Woche die Berichte angezeigt
+                  werden.
+                  Es hat zu Beginn leider nicht nach meinen Vorstellungen her geklappt und war
+                  Verbesserungsfähig, weil ich den Skript Code dafür noch nicht richtig verstanden habe. Aber
+                  kurz darauf wurde es mir ausführlich von meinem Chef erklärt und jetzt klappt es einwandfrei.
+                  Außerdem haben wir überlegt ein weiteres Programm einzusetzen, um meinen Code zu
+                  verkürzen und ich mir dadurch Text in meinem HTML sparen kann. Dafür ist JSON sehr
+                  angemessen, mit welchen wir uns in der nächsten Stunde befassen werden.</p>
               </div>
             </article>
 
@@ -338,13 +350,98 @@
             <article class="postBox">
               <div class="postImageWindow" style="background-image: url(/assets/img/codingbild.jpg"></div>
               <div class="postText">
-                <small><i class="fa-solid fa-calendar-days"></i> 28.03.2022</small>
+                <small><i class="fa-solid fa-calendar-days"></i> 24.03.2022</small>
                 <h3>Überschrift</h3>
-                <p>
-                </p>
+                <p>In der heutigen Stunde haben ich JSON näher kennengelernt.
+                  JSON steht für JavaScript Objekt Notation und ist ein einfaches Format zum Speichern und
+                  Transportieren von Daten. Es wird häufig verwendet, wenn Daten von einem Server an eine
+                  Webseite gesendet werden.
+                  Mir soll es dabei helfen meine Berichte auf einer Separaten Datei zu speichern und es nicht in
+                  meinen HTML Code einzufügen.
+                  Es kam die Frage auf, ob das einen Sinn macht, da ich nicht so viel Text habe.
+                  Im Anschluss habe ich ein weiteres JavaSkript Programm kennengelernt, und zwar ein Modul,
+                  welches mir ein gewähltes Element (in meinem Fall mein Bericht) erst anzeigt, sobald ich den
+                  Botton klicke.
+                  Ich werde es wieder bis zur nächsten Stunde üben und hoffentlich daraufhin einsetzen können.</p>
               </div>
             </article>
           </div> <!-- END TAB 6 -->
+
+          <div id="Tab7" class="tabcontent">
+            <article class="postBox">
+              <div class="Woche2"></div>
+              <div class="postImageWindow" style="background-image: url(/assets/img/codingbild.jpg"></div>
+              <div class="postText">
+                <small><i class="fa-solid fa-calendar-days"></i> 28.03.2022 </small>
+                <h3>Praktikumsstart</h3>
+                <p>Leider kam ich mit meinem Modul nicht weiter, weil Fragen bezüglich eines komplizierten
+                  Codes gelöst werden mussten. Ich habe meinem Chef also meine Fortschritte vorgestellt und
+                  wir haben gemeinsam versucht Probleme zu lösen.
+                  Ich hatte das Problem, dass mein JavaSkript Programm mir nur ein Modul anzeigen konnte
+                  und keine weitere lesen konnte. Wir waren sehr lange damit beschäftigt und kamen auf eine
+                  indirekte Lösung.
+                  Da ich mehrere Module haben wollte, müsse ich entweder für jedes einen eigenen Code
+                  schreiben oder eine Schleife einsetzen.
+                  Eine Schleife (auch „Wiederholung“ oder englisch loop) ist eine Kontrollstruktur in der
+                  Programmiersprache. Sie wiederholt eine Anweisung solange die Schleifenbedingung als
+                  Laufbedingung gültig bleibt bzw. als Abbruchbedingung nicht eintritt.
+                  In meinem Fall soll mein JavaSkript so lange den Code lesen bis es keine Module mehr findet.</p>
+              </div>
+            </article>
+
+
+            <article class="postBox">
+              <div class="postImageWindow" style="background-image: url(/assets/img/codingbild.jpg"></div>
+              <div class="postText">
+                <small><i class="fa-solid fa-calendar-days"></i> 31.03.2022</small>
+                <h3>Überschrift</h3>
+                <p>In der heutigen Stunde haben wir mit der Problemlösung weiter gemacht und haben uns für die
+                  Schleife entschieden, sonst wäre es zu umständlich geworden, wenn ich mehr als zehn
+                  Module Codes stehen habe.
+                  Leider muss ich wohl oder übel feststellen, dass ich bald nichts mehr zum Programmieren
+                  habe und mich langsam um den Inhalt meiner Webseite kümmern muss.
+                  Ich befasse mich also bis zur nächsten Stunde mit meinen Tagesberichten. Es ist wichtig
+                  feststellen zu können, ob sich die eigenen Module für die Berichte überhaupt lohnen, oder ich
+                  diese auch in den Kacheln lassen kann. Diese Entscheidung ist abhängig von der Länge
+                  meiner Berichte und kann, deshalb erst entschieden werden sobald ich die Berichte fertig
+                  geschrieben habe.
+                  Als weitere Aufgabe wäre es ausserdem wichtig mich um Bilder zu kümmern, die ich in der
+                  nächsten Stunde einsetzen möchte.</p>
+              </div>
+            </article>
+          </div> <!-- END TAB 7 -->
+
+          <div id="Tab8" class="tabcontent">
+            <article class="postBox">
+              <div class="Woche2"></div>
+              <div class="postImageWindow" style="background-image: url(/assets/img/codingbild.jpg"></div>
+              <div class="postText">
+                <small><i class="fa-solid fa-calendar-days"></i> 06.04.2022 </small>
+                <h3>Praktikumsstart</h3>
+                <p>Wir kommen langsam zum Ende meines Praktikums und somit auch zu einer fertigen
+                  Webseite.
+                  Ich habe alle Berichte fertig geschrieben und gegebenenfalls korrigiert. Schlussendlich sind wir
+                  auf die Antwort gekommen doch keine Module einzusetzen, weil ich relativ wenig Text habe
+                  und meine Berichte deshalb gut in die Kacheln passen.
+                  Aber für euch habe ich eine neue Repository erstellt damit ihr euch die Module in der
+                  „WebsiteVersion3“ Anschauen könnt.
+                  Ich hatte ein kleines Problem mit dem Einsetzen der Bildern, da ich sie vorher nicht angepasst
+                  habe und sie daher etwas zu groß sind. Die Lösung dafür ist eine einfache CSS-Anweisung,
+                  dass die Bilder sich an den Platz anpassen sollen und die Fläche so überdecken, als wären sie
+                  ein Fenster Hintergrund.</p>
+              </div>
+            </article>
+
+
+            <article class="postBox">
+              <div class="postImageWindow" style="background-image: url(/assets/img/codingbild.jpg"></div>
+              <div class="postText">
+                <small><i class="fa-solid fa-calendar-days"></i> 08.04.2022</small>
+                <h3>Überschrift</h3>
+                <p></p>
+              </div>
+            </article>
+          </div> <!-- END TAB 8 -->
 
         </div><!-- END berichte -->
     </section><!-- END posts -->
